--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
         <meta property="og:title" content="Play unblocked games online" />
         <meta property="og:description" content="All of the most popular games playable in your browser! With games such as Subway Surfers, 1v1.lol, Retrobowl, Slope, and many more fun games!" />
         <link rel="stylesheet" href="css/style.css">
-        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
         <script src="https://kit.fontawesome.com/d0c5025972.js" crossorigin="anonymous"></script>
         <meta name="theme-color" content="var(--bgColor)">
     </head>
     <body
             <!--Page Content Below-->
         <img id="userPhoto" class="animated rubberBand fast" src="icons/ppsholy.png" alt="PPSHoly">
-        <h1 class="animated jello game_title">Unblocked Games</h1>
-       <div class="elfsight-app-2f9712bc-865e-4cce-b1a9-48b5ad6e2887"></div> <div id="links" class="animated fadeInLeft delay-1s games">
+        <h1 class="animated jello game_title">Welcome Adonis. Hope you enjoy!</h1>
+        <div id="links" class="animated fadeInLeft delay-1s games">
             <div class="game_title"><input placeholder="Search" id="search" class="search" onkeyup="search_it()" type="search"><select id="tags" class="button" onclick="search_it()"><option value="all">All</option><option value="pop">Popular</option><option value="two">Two Player</option><option value="stream">Streaming</option><option value="bad">Bad Games</option></select></div>
             <h2 class="animated jello game_title">All Games:</h2>
             <a id="1 (2048 game)" class="link" href="./play/1/" target="_blank"><span class="bar"></span><img src="./icons/one.webp" alt="1 (2048 game)"><b>1 (2048 game)</b></a>
