--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <a id="1 (2048 game)" class="link" href="./play/1/" target="_blank"><span class="bar"></span><img src="./icons/one.webp" alt="1 (2048 game)"><b>1 (2048 game)</b></a>
             <a id="100 Player Pong" class="glink" href="./play/100-player-pong/" target="_blank"><span class="bar"></span><img src="./icons/100pong.webp"><b>100 Player Pong</b></a>
             <a id="10 Minutes Till Dawn" class="link" href="./play/10-minutes-till-dawn/" target="_blank"><span class="bar"></span><img src="./icons/10m.webp"><b>10 Minutes Till Dawn</b></a>
-            <a id="123movies" class="link stream" href="./play/123movies/" target="_blank"><span class="bar"></span><img src="./icons/123movies.webp"><b>123movies</b><span class="badge"><i class="fa-solid fa-file-video"></i> STREAMING</span></a>
             <a id="1v1.lol" class="link pop" href="./play/1v1/" target="_blank"><span class="bar"></span><img src="./icons/1v1.webp"><b>1v1.lol</b>  <span class="badge"><i class="fa-solid fa-star"></i> POPULAR</span><span class="badge"></a>
             <a id="1v1.space" class="link" href="./play/1v1space/" target="_blank"><span class="bar"></span><img src="./icons/1v1space.webp"><b>1v1.space</b></a>
             <a id="2048" class="link" href="./play/2048/" target="_blank"><span class="bar"></span><img src="./icons/2048.webp"><b>2048</b></a>
@@ -63,6 +62,7 @@
             <a id="Cyber City Driver" class="link two" href="./play/cyber-city-driver/" target="_blank"><span class="bar"></span><img src="./icons/cyber.webp"><b>Cyber City Driver</b><span class="badge"><i class="fa-solid fa-user"></i> 2 Player</span></a>
             <a id="Disc US" class="link two" href="./play/discus/" target="_blank"><span class="bar"></span><img src="./icons/sus.webp"><b>Disc US</b><span class="badge"><i class="fa-solid fa-user"></i> 2 Player</span></a>
             <a id="Doge miner" class="link" href="./play/dogeminer/" target="_blank"><span class="bar"></span><img src="./icons/Dogecoin.webp"><b>Doge miner</b></a>
+            <a id="Doge miner 2" class="link" href="./play/dogeminer2/" target="_blank"><span class="bar"></span><img src="./icons/Dogecoin2.jpg"><b>Doge miner 2</b></a>
             <a id="Doodle Jump" class="link" href="./play/doodlejump/" target="_blank"><span class="bar"></span><img src="./icons/doodle.webp"><b>Doodle Jump</b></a>
             <a id="Drift City" class="link" href="./play/drift-city/" target="_blank"><span class="bar"></span><img src="./icons/driftc.webp"><b>Drift City</b></a>
             <a id="DriftKing.io" class="link" href="./play/driftking/" target="_blank"><span class="bar"></span><img src="./icons/driftking.webp"><b>DriftKing.io</b></a>
@@ -136,7 +136,7 @@
             <a id="Rooftop Snipers 2" class="link" href="./play/rooftop-snipers-2/" target="_blank"><span class="bar"></span><img src="./icons/Rooftop-Snipers.webp"><b>Rooftop Snipers 2</b></a>
             <a id="Run 3" class="link" href="./play/run3/" target="_blank"><span class="bar"></span><img src="./icons/run3.webp"><b>Run 3</b></a>
             <a id="Sans" class="link pop" href="./play/sans/" target="_blank"><span class="bar"></span><img src="./icons/sans.webp"><b>Sans</b>  <span class="badge"><i class="fa-solid fa-star"></i> POPULAR</span></a>
-            <a id="123movies" class="link stream" href="https://ppstv1.netlify.app/#/search/movie" target="_blank"><span class="bar"></span><img src="./icons/Skooltv.jpg"><b>SkoolTV</b><span class="badge"><i class="fa-solid fa-file-video"></i> STREAMING</span></a>
+            <a id="Skool tv" class="link stream" href="https://ppstv1.netlify.app/#/search/movie" target="_blank"><span class="bar"></span><img src="./icons/Skooltv.jpg"><b>SkoolTV</b><span class="badge"><i class="fa-solid fa-file-video"></i> STREAMING</span></a>
             <a id="Slope" class="link pop" href="./play/slope/" target="_blank"><span class="bar"></span><img src="./icons/slope.webp"><b>Slope</b>  <span class="badge"><i class="fa-solid fa-star"></i> POPULAR</span></a>
             <a id="Stack" class="link" href="./play/Solitare/" target="_blank"><span class="bar"></span><img src="./icons/solitare.jpeg"><b>solitare</b></a>
             <a id="Space Invaders" class="link" href="./play/spaceinvaders/" target="_blank"><span class="bar"></span><img src="./icons/spaceinv.webp"><b>Space Invaders</b></a>
