--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/d0c5025972.js" crossorigin="anonymous"></script>
         <meta name="theme-color" content="var(--bgColor)">
+        <meta name="google-site-verification" content="vcmVVUeKYieuTwRM78c0Ce4Q6U6GBLwBkXwFb0EcDHc" />
     </head>
     <body
             <!--Page Content Below-->
