--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
-        <title>PPSHoly</title>
-      <link rel="icon" type="image/x-icon" href="./icons/favicon.ico">
+        <title>Tunnel</title>
+      <link rel="icon" type="image/x-icon" href="tunnel.png">
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/d0c5025972.js" crossorigin="anonymous"></script>
         <meta name="theme-color" content="var(--bgColor)">
@@ -12,8 +12,8 @@
     </head>
     <body
             <!--Page Content Below-->
-        <img id="userPhoto" class="animated rubberBand fast" src="icons/ppsholy.png" alt="PPSHoly">
-        <h1 class="animated jello game_title">Welcome back! Hope you enjoy!</h1>
+        <img id="userPhoto" class="animated rubberBand fast" src="tunnel.png" alt="PPSHoly">
+        <h1 class="animated jello game_title">Have fun!</h1>
         <div id="links" class="animated fadeInLeft delay-1s games">
             <div class="game_title"><input placeholder="Search" id="search" class="search" onkeyup="search_it()" type="search"><select id="tags" class="button" onclick="search_it()"><option value="all">All</option><option value="pop">Popular</option><option value="two">Two Player</option><option value="stream">Streaming</option><option value="bad">Bad Games</option></select></div>
             <h2 class="animated jello game_title">All Games:</h2>
